--- a/css/style.css
+++ b/css/style.css
@@ -309,9 +309,7 @@ html {
     gap: 20px;
 }
 
-.email {
-    flex-basis: calc(100% - 255px - 20px);
-}
+.email {}
 
 .placeholder {
     margin-bottom: 10px;
@@ -700,13 +698,25 @@ html {
     }
 
     .form {
-        justify-content: center;
-        flex-direction: column
+        align-items: center;       
+        flex-direction: column        
     }
 
-    .button {
-        width: 372px;
+    .email {
+        width: 100%;
+        max-width: 372px;
     }
+
+    .placeholder {
+        width: 100%;
+        max-width: 372px;
+    }
+
+     .button {
+        width: 100%;
+        max-width: 372px;
+    }
+    
 }
 
 @media (max-width: 570px) {
@@ -847,6 +857,7 @@ html {
     .hero-btn {
         padding: 20px 69px;
     }
+
     .mailing-title {
         margin-bottom: 38px;
         font-size: 26px;
@@ -859,7 +870,7 @@ html {
         padding-right: 15px;
     }
 
-    .form {
+    .form {       
         flex-direction: column;
         gap: 31px;
     }
